--- a/demo.html
+++ b/demo.html
@@ -10,6 +10,7 @@ function myFunction(){
 <body>
   <h2 id="demo">Don't click the button!!</h2>
   <button type="button" onclick="myFunction()">Click</button>
-
+  <br>
+  <button type="button" onclick="myFunction()">Click</button>
 </body>
 </html> 
